# neonadeuli-backend-potenday

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  insertDB.py  main.py  pr_test.txt  pyproject.toml  requirements.txt
.github/workflows/: integration-config.yml
app/core/: config.py  database.py  deps.py  security.py
app/error/: auth_exception.py  chat_exception.py  heritage_exceptions.py  image_exception.py
app/models/: enums.py  init.py  question.py  quiz.py  user.py  user_bookmark.py
app/models/chat/: chat_message.py  chat_session.py
app/models/heritage/: heritage.py  heritage_building.py  heritage_building_image.py  heritage_route.py  heritage_route_building.py  heritage_type.py
app/repository/: chat_repository.py  heritage_repository.py  image_repository.py  user_repository.py
app/router/: api.py
app/router/v1/: chat.py  heritage.py  image.py  user.py
app/schemas/: chat.py  heritage.py  image.py  user.py
app/service/: chat_service.py  clova_service.py  heritage_service.py  image_service.py  s3_service.py  user_service.py  validation_service.py
app/utils/: common.py  prompts.py
test/: test_chat_api.py
test/service/: chat_service_test.py
