[tool.poetry]
name = "너나들이"
version = "0.3.3"
description = "대화형 챗봇 AI와 다양한 콘텐츠로 한국의 국가 유산과 역사를 재미있게 탐구하는 문화 콘텐츠 서비스"
authors = ["정종현 <jjh3543@naver.com>"]

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "0.0.4"

[tool.black]
line-length = 79
target-version = ['py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true